--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,5 @@
-<p>admin works!</p>
+<ul>
+        <li class="text" *ngFor="let item of reservations | async">
+          {{item.apellido}}
+        </li>
+      </ul>
