--- a/src/app/reservar/reservar.component.html
+++ b/src/app/reservar/reservar.component.html
@@ -1,6 +1,31 @@
 <h1>HEADER VA AQUI</h1>
-<app-form></app-form>
+<h1>{{pelicula.Title}}</h1>
+<div>
+    <form [formGroup]="form">
+        <label> Nombre: <input formControlNombres="Name"></label>
+        <label> Apellido: <input formControlApellido="lastname"></label>
+        <label> Cedula: <input formControlCedula="cedula"></label>
+        <label> Email: <input formControlEmail="email"></label>
+        <label> Cantidad de Asientos: <input formControlCant="cant"></label>
+    </form>
 <!-- <label>
-    Name:
-    <input type="text" [reservation]="name">
-</label> -->
+    Nombre:
+    <input type="text" [formControl]="Name">
+</label>
+<label>
+    Apellido:
+    <input type="text" [formControl]="Lastname">
+</label>
+<label>
+    Cedula:
+    <input type="text" [formControl]="Cedula">
+</label>
+<label>
+    Email:
+    <input type="text" [formControl]="Email">
+</label>     -->
+</div>
+
+<button >FINALIZAR</button>
+
+<!-- onclick="{{pelicula.Seats}} == {{pelicula.Seats}}-2" -->
