Admin con reservas

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,10 @@
+<h1 class="aja">RESERVAS</h1>
 <div *ngFor="let item of forms" class="fichas">
-  <p>Name: {{item.Name}}</p>
-  <p>Lastname: {{item.Lastname}}</p>
-  <p>Cedula: {{item.Cedula}}</p>
-  <p>Email: {{item.Email}}</p>
-  <p>Seats: {{item.Seats}}</p>
+  <p>Name: {{item.name}}</p>
+  <p>Lastname: {{item.lastname}}</p>
+  <p>Cedula: {{item.cedula}}</p>
+  <p>Email: {{item.email}}</p>
+  <p>Seats: {{item.seats}}</p>
 </div>
 
 <br>
